[package]
name = "become_cheeseburger_desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
macroquad = { version = "0.4.4", features = ["audio"] }
macroquad-canvas = "0.4.1"
rand = "0.8.5"
