[package]
name = "become_cheeseburger_desktop"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
macroquad = { version = "0.4.4", features = ["audio"] }
macroquad-canvas = "0.4.1"


[lints.clippy]
pedantic = { level = "warn", priority = -1 }

cast_possible_truncation = "allow"
cast_precision_loss = "allow"
wildcard_imports = "allow"
must_use_candidate = "allow"

# [profile.release]
# debug = 2
# opt-level = 3
# strip = "none"
# lto = "thin"
# codegen-units = 1
